<resources>
    <string name="app_name">Hygge</string>
    <string name="name">Nhập tên của bạn</string>
    <string name="ten">Nhập tên của bạn</string>
    <string name="email">Nhập email của bạn</string>
    <string name="password_hint">Nhập mật khẩu của bạn</string>
    <string name="benh_nhan">BỆNH NHÂN</string>
    <string name="bac_si">BÁC SĨ</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>

    <string name="taikhoan">Tài Khoản</string>
    <string name="name_bacsi">Bs.Phan Giang</string>
    <string name="name_subinfor">Bác sĩ tâm lý</string>
    <string name="ngayhen">Ngày hẹn</string>
    <string name="Date_time_ngayhen">02/11/2021</string>
    <string name="thoigianhen">Thời gian hẹn</string>
    <string name="Date_time_thoigianhen">02:00PM</string>
    <string name="phuongthucgap">Phương thức gặp bác sĩ</string>
    <string name="goitructuyen">Gọi trực tuyến</string>
    <string name="gaptructiep">Gặp trực tiếp</string>
    <string name="ghichu">Ghi chú</string>
    <string name="them_ghi_chu">Thêm ghi chú của bạn</string>
    <string name="confirm">CHẤP NHẬN</string>
    <string name="chi_phi">Chi phí</string>
    <string name="fee_phidieutri">Chi phí điều trị</string>
    <string name="magiamgia">Mã giảm giá</string>
    <string name="fee_thanh_tien_phidieutri">800.000đ</string>
    <string name="hint_nhapmagiamgia">Nhập mã giảm giá</string>
    <string name="apdung">Áp dụng</string>
    <string name="tongcong">Tổng cộng:</string>
    <string name="fee_tong_cong">800.000đ</string>

    <string name="hoanthanh">HOÀN THÀNH</string>
    <string name="Lichhenduocxacnhan1">Lịch hẹn đã được xác nhận</string>
    <string name="Lichhenduocxacnhan2">Cuộc gọi trực tuyến với Bs. Phan Giang</string>
    <string name="Lichhenduocxacnhan3">sẽ bắt đầu vào lúc 2:00 CH</string>
    <string name="Lichhenduocxacnhan4">ngày 02/11/2021</string>

    <string name="Lichhendaduocxacnhan">Lịch hẹn đã được xác nhận</string>
    <string name="Call">GỌI</string>
    <string name="Huylich">HỦY LỊCH</string>
    <string name="Ghichu">GHI CHÚ</string>
    <string name="Danhgia">ĐÁNH GIÁ</string>
    <string name="Lichhentruocdo">Lịch hẹn trước đó</string>
    <string name="Date_time_Giohentruocdo">5:00 CH</string>
    <string name="Date_time_Ngayhentruocdo">15/10/2021</string>
    <string name="Date_time_Giohentruoctruocdo">3:00 CH</string>
    <string name="Date_time_Ngayhentruoctruocdo">08/10/2021</string>

    <string name="Lichhendabihuy">Lịch hẹn đã bị hủy</string>

    <string name="ten_ban">Tên bạn là</string>
    <string name="email_cua_ban">Email/SĐT</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="tao_tai_khoan">TẠO TÀI KHOẢN</string>
    <string name="da_co_tai_khoan">Bạn đã có tài khoản</string>
    <string name="sign_in"><u>Đăng nhập</u></string>
    <string name="chao_mung">CHÀO MỪNG TRỞ LẠI</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="so_tien">Số tiền</string>

    <string name="next">Tiếp theo</string>
    <string name="description">Ví điện tử Momo</string>
    <string name="welcome_name">Xin chào, Quân</string>
    <string name="gt_nam">Nam</string>
    <string name="gt_nu">Nữ</string>
    <string name="gt_khac">Khác</string>

    <string name="co_chung_chi">Có chứng chỉ</string>
    <string name="find_theraphy">TÌM BÁC SĨ</string>
    <string name="co_kinh_nghiem">Có kinh nghiệm</string>
    <string name="than_thien">Thân thiện</string>
    <string name="binh_dang_gioi">Bình đẳng giới</string>
    <string name="tu_van_ao">Tư vấn ảo</string>
    <string name="chi_phi_re">Chi phí rẻ</string>

    <string name="tep_am_thanh">Tệp âm thanh bạn đang nghe</string>
    <string name="xem_them"><u>Xem thêm</u></string>
    <string name="daytime_appointment">14:00 PM, 22/11/2021</string>

    <string name="help">Chúng tôi có thể giúp gì được cho bạn?</string>
    <string name="self_help">TỰ TRỊ LIỆU</string>
    <string name="doctor_help">TÌM BÁC SĨ</string>

    <string name="note">Ghi chú buổi trị liệu</string>
    <string name="note1">Ghi chú</string>

    <string name="intro1">Chúng tôi sẽ giúp bạn tự trị liệu</string>
    <string name="description1">Công cụ chẩn đoán của chúng tôi sẽ đưa ra các liệu pháp tốt nhấ để giải quyết các vấn đề về tâm lý cho bạn</string>
    <string name="intro2">Tìm bác sĩ tâm lý phù hợp cho bạn</string>
    <string name="description2">Chúng tôi sẽ đưa ra các danh sách bác sĩ tâm lý phù hợp với yêu cầu và cung cấp dịch vụ tư vấn ảo cho bạn</string>
    <string name="intro3">Thông tin bạn nhận được</string>
    <string name="description3">Chúng tôi sẽ cung cấp, chọn lọc các bài báo và tin tức tốt nhất nhằm giúp bạn luôn cập nhật đầy đủ thông tin về sức khỏe tinh thần</string>

    <string name="Trangchu">Trang chủ</string>
    <string name="Tutrilieu">Tự trị liệu</string>
    <string name="Cantuvan">Cần tư vấn</string>
    <string name="Bangtin">Bảng tin</string>
    <string name="Taikhoan">Tài khoản</string>

    <string name="ban_chung">4 bạn chung đã từng khám Bs.Giang</string>
    <string name="exp">Kinh nghiệm</string>
    <string name="fee">Chi phí điều trị</string>
    <string name="fee_value">800.000đ/lần</string>
    <string name="exp_value">4 năm</string>
    <string name="major">Chuyên gia về</string>
    <string name="major_detail">Chứng lo âu, chứng ám ảnh sợ hãi, rối loạn giấc ngủ, rối loạn tâm lý</string>
    <string name="tag">Nhãn</string>
    <string name="review">Đánh giá của mọi người</string>
    <string name="more_detail">Xem thêm</string>
    <string name="book">Đặt khám</string>


    <string name="huybuoihenko">Bạn có chắc chắn sẽ hủy buổi hẹn này</string>
    <string name="Yes">CÓ</string>
    <string name="No">KHÔNG</string>

    <string name="tim_kiem">Tìm kiếm</string>
    <string name="moi_chu_de">Mọi chủ đề</string>
    <string name="ap_luc">Áp lực</string>
    <string name="lo_au">Lo âu</string>
    <string name="cang_thang">Căng thẳng</string>
    <string name="mat_ngu">Mất ngủ</string>
    <string name="thieu_tap_trung">Thiếu tập trung</string>
    <string name="de_xuat">Đề xuất cho bạn</string>
    <string name="title_blog_1">Chứng hoang tưởng ảo giác Paranoia</string>
    <string name="sub_blog_1">dịch bệnh đã để lại những nỗi sợ vô hình</string>
    <string name="tac_gia">Tác giả</string>
    <string name="time_reading">3 phút đọc</string>

    <string name="apointment">2:00 CH, 02/11/2021</string>
    <string name="name_bacsi1">BS. Quang Huỳnh</string>
    <string name="doctor_info">Nhà tâm lý học lâm sàng</string>
    <string name="appointment">Lịch hẹn sắp tới</string>
    <string name="your_doctor">Bác sĩ của bạn</string>
    <string name="loc">Lọc</string>

    //Menu Navigation
    <string name="title_home">Trang chủ</string>
    <string name="title_self_help">Tự trị liệu</string>
    <string name="title_advise">Cần tư vấn</string>
    <string name="title_newsfeed">Bảng tin</string>
    <string name="title_account">Tài khoản</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Danhgiacuaban">Đánh giá của bạn</string>
    <string name="HintDanhgiacuaban">Hãy viết đánh giá của bạn</string>
    <string name="user_name">Quân Nguyễn</string>
    <string name="title_payment">Các lịch hẹn cần thanh toán</string>
    <string name="btn_pay">Thanh toán</string>
    <string name="btn_cancel">Hủy Lịch</string>
    <string name="forget_password"><u>Quên mật khẩu?</u></string>
    <string name="title_forgot_password">KHÔI PHỤC TÀI KHOẢN</string>
    <string name="Insert_forgot_email">Nhập Email/SĐT</string>
    <string name="hint_email">Nhập Email hoặc Số điện thoại</string>
    <string name="introduction_reset_password">Mật khẩu mới sẽ được gửi đến Email hoặc SĐT mà bạn đã xác nhận. Hãy đổi mật khẩu sau khi đăng nhập lại.</string>
    <string name="gui_ma"><u>Gửi lại</u></string>
    <string name="title_patient">Bệnh nhân</string>
    <string name="title_rate">Đánh giá</string>
    <string name="Confirm">XÁC NHẬN</string>


    <string name="Benhnhannoigiveban">Bênh nhân nói gì về bạn</string>
    <string name="SortByName">Theo tên</string>
    <string name="SortByDate">Theo ngày</string>
    <string name="Lichhenduocxacnhan">Lịch hẹn đã được xác nhận</string>
    <string name="Giodaxacnhan">2:00 CH</string>
    <string name="Ngaydaxacnhan">15/10/2021</string>
    <string name="your_patient">Bệnh nhân của bạn</string>
    <string name="create_profile_therapist">Tạo hồ sơ</string>
    <string name="Danhgiatrungbinh">Điểm đánh giá trung bình</string>
    <string name="find_therapist">Tìm bác sĩ</string>
    <string name="Benhnhan">Bệnh nhân</string>
    <string name="Bacsi">Bác sĩ</string>
    <string name="Banlaai">Bạn là ai</string>
    <string name="intro_bs1">Tư vấn ảo</string>
    <string name="description_bs1">Lên lịch các cuộc gọi tư vấn cho bệnh nhân bằng hình ảnh và âm thanh ngay tại nhà bạn</string>
    <string name="intro_bs2">Lên lịch</string>
    <string name="description_bs2">Dễ dàng sắp xếp lịch hẹn với bệnh nhân dựa trên thời gian rảnh và bận của bạn</string>
    <string name="intro_bs3">Dễ dàng truy cập hồ sơ bệnh nhân</string>
    <string name="description_bs3">Tất cả dữ liệu bệnh nhân của bạn như ghi chú, báo cáo, đơn thuốc đều có thể truy cập được từ một nguồn duy nhất</string>
    <string name="name_Benhnhan">Quân Nguyễn</string>
    <string name="name_Bacsi">Phan Giang</string>
    <string name="welcome_name_bs">Xin chào, Giang</string>
</resources>