<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="10dp"
    android:background="@drawable/button_listivew">
    <ImageView
        android:id="@+id/imvDeXuatBlog"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:src="@drawable/bndexuat1"/>
    <TextView
        android:id="@+id/txtTitleBlog"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/title_blog_1"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtSubBlog"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_blog_1"/>
    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtTacGia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/tac_gia"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txtTimeRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_reading"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>