<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="14dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSigninBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_button_back"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:layout_gravity="center">
            </ImageView>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chao_mung"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_cua_ban"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edtEmailDN"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/email"
        android:background="@drawable/edit_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mat_khau"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edtPWDN"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edit_text"/>
    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button"/>
    <TextView
        android:id="@+id/txtQuenMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16dp"/>

</LinearLayout>