<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background_color"
    tools:context=".BookConfirmation_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_button_back"
            android:gravity="start"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hoanthanh"
            android:textSize="26sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Lichhenduocxacnhan1"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Lichhenduocxacnhan2"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Lichhenduocxacnhan3"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Lichhenduocxacnhan4"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <ImageView
            android:id="@+id/imvpaysuccessfull"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:src="@drawable/paysuccessful" />
    </LinearLayout>

</LinearLayout>