<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imvCalendarIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/iconcalendar"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtLichdaxacnhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lichhenduocxacnhan"
                android:textSize="16sp"
                android:textColor="@color/color_app_black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/txtGiodaxacnhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Giodaxacnhan"
                    android:textColor="@color/color_app_light_gray"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/txtNgaydaxacnhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ngaydaxacnhan"
                    android:textSize="16sp"
                    android:textColor="@color/color_app_light_gray"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnGoi1"
                    android:layout_width="92dp"
                    android:layout_height="32dp"
                    android:background="@drawable/button_press_has_color"
                    android:text="@string/Call"
                    android:textColor="@color/color_app_black"
                    android:textSize="13sp" />
                <Button
                    android:id="@+id/btnHuyLichdaxacnhan"
                    android:layout_width="92dp"
                    android:layout_height="32dp"
                    android:text="@string/Huylich"
                    android:background="@drawable/button_press_has_color"
                    android:textColor="@color/color_app_black"
                    android:layout_marginStart="10dp"
                    android:textSize="13sp"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>
</LinearLayout>