<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="212dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/radio_normal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <TextView
        android:id="@+id/txtDialogHuyhen"
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/huybuoihenko"
        android:textColor="@color/color_app_black"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <Button
        android:id="@+id/btnNo"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/radio_selected"
        android:button="@android:color/transparent"
        android:gravity="center"
        android:text="@string/No"
        android:textColor="@color/color_app_black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:text="@string/Yes"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="5dp" />
    </LinearLayout>
</LinearLayout>