<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imvCalendar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/iconcalendar"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lichhentruocdo"
                android:textSize="16sp"
                android:textColor="@color/color_app_black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date_time_Giohentruocdo"
                    android:textColor="@color/color_app_light_gray"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date_time_Ngayhentruocdo"
                    android:textSize="16sp"
                    android:textColor="@color/color_app_light_gray"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnOpenNote"
                    android:layout_width="92dp"
                    android:layout_height="32dp"
                    android:text="@string/Ghichu"
                    android:background="@drawable/button_press_has_color"
                    android:textColor="@color/color_app_black"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>